<resources>
    <string name="app_name">WebView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="programming">Programming</string>
    <string name="programmerhumor">ProgrammerHumor</string>
    <string name="news">News</string>
    <string name="thenetherlands">TheNetherlands</string>
    <string name="coolguides">coolguides</string>
    <string name="gaming">gaming</string>
    <string name="juggling">juggling</string>
    <string name="science">science</string>
    <string name="iama">IAmA</string>
    <string name="askscience">askscience</string>
</resources>
