<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Programming"
            android:title="@string/programming" />
        <item
            android:id="@+id/ProgrammerHumor"
            android:title="@string/programmerhumor" />
        <item
            android:id="@+id/News"
            android:title="@string/news" />
        <item
            android:id="@+id/TheNetherlands"
            android:title="@string/thenetherlands" />

        <item
            android:id="@+id/coolguides"
            android:title="@string/coolguides" />

        <item
            android:id="@+id/gaming"
            android:title="@string/gaming" />
        <item
            android:id="@+id/juggling"
            android:title="@string/juggling" />
        <item
            android:id="@+id/science"
            android:title="@string/science" />
        <item
            android:id="@+id/iama"
            android:title="@string/iama" />
        <item
            android:id="@+id/askscience"
            android:title="@string/askscience" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="About" />
        </menu>
    </item>

</menu>
